--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://techbeeyt.gihub.io/dev-tasir-portfolio",
+    "homepage": "https://techbeeyt.gihub.io/",
     "name": "isse-nai",
     "version": "0.1.0",
     "private": true,
